[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["swx-sai <124345558+hiromitsu-sai@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"


[tool.poetry.group.dev.dependencies]
alembic = "^1.11.1"
sqlacodegen-v2 = "^0.1.4"
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
autoflake = "^2.2.0"
mypy = "^1.4.1"
autodoc = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
